<resources>
    <string name="app_name">tfg1</string>
    <string name="title_activity_maps">Map</string>
    <string name="play">PLAY</string>
    <string name="stop">STOP</string>
    <string name="borrar">BORRAR</string>
    <string name="nombre">Nombre:</string>
    <string name="guardarBtn">Guardar</string>
    <string name="cancelarBtn">Cancelar</string>
    <string name="guardarBtn1">GUARDAR</string>
    <string name="Rutas">Rutas</string>
    <string name="title_activity_rutas">Rutas</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="Cargar_Ruta">Cargar ruta</string>

</resources>
