<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button

        android:id="@+id/PlayBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/play"
        android:layout_gravity="center_vertical"
        />
        <Button

        android:id="@+id/StopBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stop"
        android:layout_gravity="center_vertical"
        />

        <Button

            android:id="@+id/BorrarBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/borrar"
            android:layout_gravity="center_vertical"

            />
        <Button

            android:id="@+id/guardarBtn1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/guardarBtn1"
            android:layout_gravity="center_vertical"
            android:onClick="funcionIniciarAlertDialog"
            />
    </LinearLayout>


    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
        android:layout_height="match_parent" android:id="@+id/map" tools:context=".MapsActivity"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_weight="1"/>
    <!--
    <fragment
        android:name="com.example.andrs.tfg1.fragmento"
        android:id="@+id/article_fragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="3"
        />-->

    <Button
        android:id="@+id/Rutas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/Rutas"
        android:onClick="iniciarRutasGuardadas"/>

</LinearLayout>




